--- a/html/contact.html
+++ b/html/contact.html
@@ -49,7 +49,7 @@
 <body id=bcont style='height:100%;'>
   <div id=container style='height:100%;'>
     <header>
-      <a href="../index.html" title="Home">
+      <a href="../index.html">
         <img class=myphoto src="../images/logos/me.png" alt='My head photo'>
       </a>
       <div id=headerdiv>
@@ -57,22 +57,22 @@
         <nav id=mainnav>
         <ul class=navlist>
           <li class=navli id=navlihome>
-            <a id=home href="../index.html" title="Home"></a>
+            <a id=home href="../index.html"></a>
           </li>
           <li class=navli id=navliprof>
-            <a id=prof href="professional.html" title="Professional work experience"></a>
+            <a id=prof href="professional.html"></a>
           </li>
           <li class=navli id=navlisoft>
-            <a id=soft href="software.html" title="Personal software projects"></a>
+            <a id=soft href="software.html"></a>
           </li>
           <li class=navli id=navlidesign>
-            <a id=dsgn href="design.html#DESIGN" title="Design work"></a>
+            <a id=dsgn href="design.html#DESIGN"></a>
           </li>
           <li class=navli id=navliphoto>
-            <a id=phtgph href="photography.html#PHOTO" title="Photographs"></a>
+            <a id=phtgph href="photography.html#PHOTO"></a>
           </li>
           <li class=navli id=navlicontact_selected>
-            <a id=cntct_selected title="Contact me"></a>
+            <a id=cntct_selected></a>
           </li>
         </ul>
         </nav>
@@ -82,32 +82,32 @@
         <div id=mobilelist>
           <ul class=gen_text>
             <li>
-              <a class=mobile_menu_item href="../index.html" title="Home">
+              <a class=mobile_menu_item href="../index.html">
                 <span class=main_glyph>&#9978;</span> Home
               </a>
             </li>
             <li>
-              <a class=mobile_menu_item href="professional.html" title="Professional work experience">
+              <a class=mobile_menu_item href="professional.html">
                 <span class=main_glyph>&#9874;</span> Professional
               </a>
             </li>
             <li>
-              <a class=mobile_menu_item href="software.html" title="Personal software projects">
+              <a class=mobile_menu_item href="software.html">
                 <span class=main_glyph>&#9000;</span> Software
               </a>
             </li>
             <li>
-              <a class=mobile_menu_item href="design.html" title="Design work">
+              <a class=mobile_menu_item href="design.html">
                 <span class=main_glyph>&#9998;</span> Design
               </a>
             </li>
             <li>
-              <a class=mobile_menu_item href="photography.html" title="Photographs">
+              <a class=mobile_menu_item href="photography.html">
                 <span class=main_glyph>&#128247;</span>Photography
               </a>
             </li>
             <li>
-              <a id=mobile_selected title="Contact me">
+              <a id=mobile_selected>
                 <span class=main_glyph>&#9993;</span> Contact
               </a>
             </li>
@@ -124,7 +124,7 @@
           </a>
         </li>
         <li id=github>
-          <a href="https://github.com/Thomas-Rudge" title="Connect on GitHub" target="_blank">
+          <a href="https://github.com/Thomas-Rudge" title="Check out my GitHub" target="_blank">
           </a>
         </li>
         <li id=emailme>
