--- a/html/swift_page.html
+++ b/html/swift_page.html
@@ -59,22 +59,22 @@
         <nav id=mainnav>
         <ul class=navlist>
           <li class=navli id=navlihome>
-            <a id=home href="../index.html" title="Home"></a>
+            <a id=home href="../index.html"></a>
           </li>
           <li class=navli id=navliprof>
-            <a id=prof href="professional.html" title="Professional work experience"></a>
+            <a id=prof href="professional.html"></a>
           </li>
           <li class=navli id=navlisoft_selected>
-            <a id=soft_selected href="software.html" title="Personal software projects"></a>
+            <a id=soft_selected href="software.html"></a>
           </li>
           <li class=navli id=navlidesign>
-            <a id=dsgn href="design.html#DESIGN" title="Design work"></a>
+            <a id=dsgn href="design.html#DESIGN"></a>
           </li>
           <li class=navli id=navliphoto>
-            <a id=phtgph href="photography.html#PHOTO" title="Photographs"></a>
+            <a id=phtgph href="photography.html#PHOTO"></a>
           </li>
           <li class=navli id=navlicontact>
-            <a id=cntct href="contact.html" title="Contact me"></a>
+            <a id=cntct href="contact.html"></a>
           </li>
         </ul>
         </nav>
@@ -84,32 +84,32 @@
         <div id=mobilelist>
           <ul class=gen_text>
             <li>
-              <a class=mobile_menu_item href="../index.html" title="Home">
+              <a class=mobile_menu_item href="../index.html">
                 <span class=main_glyph>&#9978;</span> Home
               </a>
             </li>
             <li>
-              <a class=mobile_menu_item href="professional.html" title="Professional work experience">
+              <a class=mobile_menu_item href="professional.html">
                 <span class=main_glyph>&#9874;</span> Professional
               </a>
             </li>
             <li>
-              <a id=mobile_selected href="software.html" title="Personal software projects">
+              <a id=mobile_selected href="software.html">
                 <span class=main_glyph>&#9000;</span> Software
               </a>
             </li>
             <li>
-              <a class=mobile_menu_item href="design.html" title="Design work">
+              <a class=mobile_menu_item href="design.html">
                 <span class=main_glyph>&#9998;</span> Design
               </a>
             </li>
             <li>
-              <a class=mobile_menu_item href="photography.html" title="Photographs">
+              <a class=mobile_menu_item href="photography.html">
                 <span class=main_glyph>&#128247;</span>Photography
               </a>
             </li>
             <li>
-              <a class=mobile_menu_item href="contact.html" title="Contact me">
+              <a class=mobile_menu_item href="contact.html">
                 <span class=main_glyph>&#9993;</span> Contact
               </a>
             </li>
@@ -126,7 +126,7 @@
           </a>
         </li>
         <li id=github>
-          <a href="https://github.com/Thomas-Rudge" title="Connect on GitHub" target="_blank">
+          <a href="https://github.com/Thomas-Rudge" title="Check out my GitHub" target="_blank">
           </a>
         </li>
         <li id=emailme>
