--- a/index.html
+++ b/index.html
@@ -62,22 +62,22 @@
         <nav id=mainnav>
           <ul class=navlist>
             <li class=navli id=navlihome_selected>
-              <a id=home_selected title="Home"></a>
+              <a id=home_selected></a>
             </li>
             <li class=navli id=navliprof>
-              <a id=prof href="html/professional.html" title="Professional work experience"></a>
+              <a id=prof href="html/professional.html"></a>
             </li>
             <li class=navli id=navlisoft>
-              <a id=soft href="html/software.html" title="Personal software projects"></a>
+              <a id=soft href="html/software.html"></a>
             </li>
             <li class=navli id=navlidesign>
-              <a id=dsgn href="html/design.html#DESIGN" title="Design work"></a>
+              <a id=dsgn href="html/design.html#DESIGN"></a>
             </li>
             <li class=navli id=navliphoto>
-              <a id=phtgph href="html/photography.html#PHOTO" title="Photographs"></a>
+              <a id=phtgph href="html/photography.html#PHOTO"></a>
             </li>
             <li class=navli id=navlicontact>
-              <a id=cntct href="html/contact.html" title="Contact me"></a>
+              <a id=cntct href="html/contact.html"></a>
             </li>
           </ul>
         </nav>
@@ -87,32 +87,32 @@
         <div id=mobilelist>
           <ul class=gen_text>
             <li>
-              <a id=mobile_selected title="Home">
+              <a id=mobile_selected>
                 <span class=main_glyph>&#9978;</span> Home
               </a>
             </li>
             <li>
-              <a class=mobile_menu_item href="html/professional.html" title="Professional work experience">
+              <a class=mobile_menu_item href="html/professional.html">
                 <span class=main_glyph>&#9874;</span> Professional
               </a>
             </li>
             <li>
-              <a class=mobile_menu_item href="html/software.html" title="Personal software projects">
+              <a class=mobile_menu_item href="html/software.html">
                 <span class=main_glyph>&#9000;</span> Software
               </a>
             </li>
             <li>
-              <a class=mobile_menu_item href="html/design.html" title="Design work">
+              <a class=mobile_menu_item href="html/design.html">
                 <span class=main_glyph>&#9998;</span> Design
               </a>
             </li>
             <li>
-              <a class=mobile_menu_item href="html/photography.html" title="Photographs">
+              <a class=mobile_menu_item href="html/photography.html">
                 <span class=main_glyph>&#128247;</span>Photography
               </a>
             </li>
             <li>
-              <a class=mobile_menu_item href="html/contact.html" title="Contact me">
+              <a class=mobile_menu_item href="html/contact.html">
                 <span class=main_glyph>&#9993;</span> Contact
               </a>
             </li>
@@ -129,7 +129,7 @@
           </a>
         </li>
         <li id=github>
-          <a href="https://github.com/Thomas-Rudge" title="Connect on GitHub" target="_blank">
+          <a href="https://github.com/Thomas-Rudge" title="Check out my GitHub" target="_blank">
           </a>
         </li>
         <li id=emailme>
