--- a/html/swift_page.html
+++ b/html/swift_page.html
@@ -1,3 +1,22 @@
+<!--
+MTMTMTMTMTMTMTMTMTMTMTMTMTMTMT
+MTMTMTMTMTMTMTMTMTMTMTMTMTMTMT
+MTM\      \TMTMTMTMTMTMTMTMTMT
+MTMT\      \MTMTMTMTMTMTMTMTMT
+MTMTM\      \TMTMTMTMTMTMTMTMT
+MTMTMT\      \MTMTMTMTMTMTMTMT
+MTMTMTM\      \TMTMTMTMTMTMTMT
+MTMTMTMT|      |MTMTMTMTMTMTMT
+MTMTMTM/      /TMTMTMTMTMTMTMT
+MTMTMT/      /MTMTMTMTMTMTMTMT
+MTMTM/      /TMTMTMTMTMTMTMTMT
+MTMT/     ./MT|  \/  |T|_  _|T
+MTM/_____ /TMT|_|\/|_|TMT__TMT
+MTMTMTMTMTMTMTMTMTMTMTMTMTMTMT
+MTMTMTMTMTMTMTMTMTMTMTMTMTMTMT
+
+    www.thomasrudge.co.uk
+-->
 <!doctype html>
 
 <html lang="en-GB">
