--- a/index.html
+++ b/index.html
@@ -1,3 +1,21 @@
+<!--
+              /\
+             /MM\
+            /MMMM\
+           /MMMMMM\
+          /MMMMMMMM\
+         /MMMMMMMMMM\
+        /MMMMMMMMMMMM\
+       /NMMMMMMMMMMMMN\
+      /NMMMMMMMMMMMMMMM\
+     /MMMMMMMM/\MMMMMMMM\
+    /MMMMMMMM/  \MMMMMMMM\
+   /MMMMMMMM/    \MMMMMMMM\
+ `/MMMMMMMM/      \MMMMMMMM\
+ /MMMMMMMM/        \MMMMMMMM\
+
+     www.thomasrudge.co.uk
+-->
 <!doctype html>
 
 <html lang="en-GB">
