--- a/html/software.html
+++ b/html/software.html
@@ -39,6 +39,27 @@
   <!-- CSS & JS -->
   <link rel="stylesheet" href="../css/main.css">
   <script type="text/javascript" src="../javascript/mobile_navigation.js" async></script>
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+  "@context": "http://schema.org",
+  "@type": "Person",
+  "url": "http://www.thomasrudge.co.uk",
+  "honorificPrefix": "Mr",
+  "givenName": "Thomas",
+  "additionalName": "Edward",
+  "familyName": "Rudge",
+  "image": "../images/logos/me.png",
+  "gender": "http://schema.org/Male",
+  "email": "hello@thomasrudge.co.uk",
+  "owns": [{
+    "@type": "Thing",
+    "name": "Nepos",
+    "url": "http://www.neposservice.wix.com/nepos",
+    "image": "../images/logos/nepos_logo.png"
+  }]
+  }
+  </script>
   <!-- Icons-->
   <link rel="apple-touch-icon" sizes="57x57" href="../favicon/apple-touch-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="../favicon/apple-touch-icon-60x60.png">
