Fixed syntax on JSON-LD structured data

--- a/html/professional.html
+++ b/html/professional.html
@@ -51,7 +51,7 @@
   "familyName": "Rudge",
   "image": "../images/logos/me.png",
   "gender": "http://schema.org/Male",
-  "email": "hello@thomasrudge.co.uk",
+  "email": "hello@thomasrudge.co.uk"
   }
   </script>
   <!-- Icons-->
