--- a/html/professional.html
+++ b/html/professional.html
@@ -180,7 +180,7 @@
         Sole designer and developer of <a class=normal_link href='software.html#nepos'>Nepos</a>, a point of sale and cash management system currently being distributed in north east India.
         </li>
         <li>
-        Proven leadership skills with extensive experience managing operation, test, and implementation teams, across both local and global area. 
+        Proven leadership skills with extensive experience managing operation, test, and implementation teams, across both local and global areas. 
         </li>
         <li>
         Capable of achieving operational efficiencies through data analysis, process redesign, and bespoke automation.
@@ -294,13 +294,13 @@
           </tr>
           <tr>
             <td>
-            Optimisation <img class=table_img src='../images/logos/optimise.png'>
+            <span class=small_text>Optimisation</span> <img class=table_img src='../images/logos/optimise.png'>
             </td>
             <td>
             <span class=small_text>Problem Solving</span> <img class=table_img src='../images/logos/problem.png'>
             </td>
             <td>
-            <span class=small_text>Risk Analysis</span> <img class=table_img src='../images/logos/risk.png'>
+            Risk Analysis <img class=table_img src='../images/logos/risk.png'>
             </td>
             <td colspan=2>
             Operations Analysis <img class=table_img src='../images/logos/analysis.png'>
@@ -328,7 +328,7 @@
           </tr>
           <tr>
             <td>
-            Self Employed <span class=small_text>(Software, Graphic Design)</span>
+            Freelance <span class=small_text>(Software, Graphic Design)</span>
             </td>
           </tr>
           <tr>
@@ -385,7 +385,7 @@
           </tr>
           <tr>
             <td>
-            Business Analyst <span class=small_text>Corporate Change</span>
+            Business Analyst, <span class=small_text>Corporate Change</span>
             </td>
           </tr>
           <tr>
@@ -423,7 +423,7 @@
           </tr>
           <tr>
             <td>
-            Account Manager <span class=small_text>Global Payments</span>
+            Account Manager, <span class=small_text>Global Payments</span>
             </td>
           </tr>
           <tr>
@@ -489,7 +489,7 @@
             Present
             </td>
             <td>
-            Self Employed <span class=small_text>(Software, Graphic Design)</span>
+            Freelance <span class=small_text>(Software, Graphic Design)</span>
             </td>
             <td>
             Various
@@ -540,7 +540,7 @@
             Aug 2010
             </td>
             <td>
-            Business Analyst, Corporate Change
+            Business Analyst, <span class=small_text>Corporate Change</span>
             </td>
             <td>
             Barclays Plc
@@ -574,7 +574,7 @@
             May 2007
             </td>
             <td>
-            Account Manager <span class=small_text>Global Payments</span>
+            Account Manager, <span class=small_text>Global Payments</span>
             </td>
             <td>
             Barclays Plc
