--- a/html/swift_page.html
+++ b/html/swift_page.html
@@ -41,6 +41,17 @@ MTMTMTMTMTMTMTMTMTMTMTMTMTMTMT
   <link rel="stylesheet" href="../css/main.css">
   <script type="text/javascript" src="../javascript/MT940_50.js" async></script>
   <script type="text/javascript" src="../javascript/mobile_navigation.js" async></script>
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+  "@context": "http://schema.org",
+  "@type": "Product",
+  "name": "Swift MT940/950 Generator",
+  "description": "An online tool that converts csv data into an MT940 or MT950 swift cash statement."
+  "category": "Software",
+  "logo": "../images/logos/mt_logo.png"
+  }
+  </script>
   <!-- Icons-->
   <link rel="apple-touch-icon" sizes="57x57" href="../favicon/apple-touch-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="../favicon/apple-touch-icon-60x60.png">
