--- a/html/contact.html
+++ b/html/contact.html
@@ -21,9 +21,9 @@
 <html lang="en-GB">
 <head>
   <meta charset="utf-8">
-  <title>Thomas Rudge</title>
+  <title>Contact Thomas Rudge</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="The resume of Thomas Rudge">
+  <meta name="description" content="Contact Thomas Rudge">
   <meta name="author" content="Thomas Rudge">
   <meta name="keywords" content="thomas, rudge, resume, cv, analyst, creative, contact">
   <!-- Open Graph Properties-->
