--- a/html/swift_page.html
+++ b/html/swift_page.html
@@ -22,9 +22,9 @@ MTMTMTMTMTMTMTMTMTMTMTMTMTMTMT
 <html lang="en-GB">
 <head>
   <meta charset="utf-8">
-  <title>Thomas Rudge</title>
+  <title>MT Swift Generator</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="The resume of Thomas Rudge">
+  <meta name="description" content="Convert CSV to swift MT940 or MT950 cash statement messages.">
   <meta name="author" content="Thomas Rudge">
   <meta name="keywords" content="thomas, rudge, resume, cv, analyst, creative, swift, mt940, mt950, generator, convert">
   <!-- Open Graph Properties-->
