--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta charset="utf-8">
   <title>Thomas Rudge</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="The resume of Thomas Rudge">
+  <meta name="description" content="The personal website of Thomas Rudge. ">
   <meta name="author" content="Thomas Rudge">
   <meta name="keywords" content="thomas, rudge, resume, cv, analyst, creative">
   <!-- Open Graph Properties-->
@@ -90,8 +90,8 @@
   <div id=container>
     <header>
       <img class=myphoto src="images/logos/me.png" alt='My head photo'>
-      <div id=headerdiv>
-        <h1 class=myname>Thomas Rudge</h1>
+      <div id=headerdiv itemscope itemtype="http://schema.org/Person">
+        <h1 class=myname itemprop="name">Thomas Rudge</h1>
         <nav id=mainnav>
           <ul class=navlist>
             <li class=navli id=navlihome_selected>
