--- a/html/professional.html
+++ b/html/professional.html
@@ -21,9 +21,9 @@
 <html lang="en-GB">
 <head>
   <meta charset="utf-8">
-  <title>Thomas Rudge</title>
+  <title>Thomas Rudge: Professional Resume</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="The resume of Thomas Rudge">
+  <meta name="description" content="The professional resume of Thomas Rudge. ">
   <meta name="author" content="Thomas Rudge">
   <meta name="keywords" content="thomas, rudge, resume, cv, analyst, creative, professional">
   <!-- Open Graph Properties-->
@@ -35,7 +35,7 @@
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
-  <meta property="og:description" content="The personal resume of Thomas Edward Rudge.">
+  <meta property="og:description" content="The personal resume of Thomas Edward Rudge. A Business Analyst, Operations Expert, and Software Developer, with over 8 year's experience in Business and IT Change.">
   <!-- CSS & JS -->
   <link rel="stylesheet" href="../css/main.css">
   <script type="text/javascript" src="../javascript/mobile_navigation.js" async></script>
@@ -453,7 +453,7 @@
           </tr>
           <tr>
             <td>
-            Jul 2014 -Present
+            Jul 2014 - Jul 2015
             </td>
           </tr>
           <tr>
@@ -608,7 +608,7 @@
             Jul 2014
             </td>
             <td class=centred_txt>
-            Present
+            Jul 2015
             </td>
             <td>
             Teacher of English & IT
