--- a/html/software.html
+++ b/html/software.html
@@ -185,11 +185,11 @@
         <img class='genphoto mobile_child img150' src="../images/logos/nepos_logo.png" alt="NEPOS Logo">
       </a>
       <p class='gen_text justify med_text mobile_child'>
-      In late 2013, after a few lessons in programming, my brother in-law half jokingly said that his business was paying a lot 
-      for its POS software, and whether I could make him a simple POS and cash management system to replace it. So I started researching 
-      and playing around with Python, seeing the task more as a learning exercise rather than anything serious. But a year and a half later 
-      the first version of Nepos was released to the general public, and is currently being used by several businesses in India. Two more 
-      versions have since been released with new features, the most recent being in January 2016.
+      After hearing my brother-in-law complain about the cost of his business's software, I decided to help him out and went about 
+      designing a simple POS and cash management system. I started researching and playing around with the Python programming language 
+      and its libraries, at first seeing the task more as a learning exercise rather than anything serious. But a year and a half later 
+      the first version of Nepos was released to the general public, and now it is currently being used by several businesses in the 
+      north east of India.
       <br><br>
       Nepos's main features include: the POS interface; cash-flow, invoice, and loss records; end of day reporting; stock records and monitoring; 
       MI console; search screen for all records; archiving; customisable user profiles; user activity, archive, and error logs; and automatic alerts 
