Improved experience for mobile users
A few minor changes to change the look for mobile users.

--- a/html/contact.html
+++ b/html/contact.html
@@ -38,7 +38,6 @@
   <meta property="og:description" content="Contact Thomas Edward Rudge.">
   <!-- CSS & JS -->
   <link rel="stylesheet" href="../css/main.css">
-  <script type="text/javascript" src="../javascript/mobile_navigation.js" async></script>
   <!-- Icons-->
   <link rel="apple-touch-icon" sizes="57x57" href="../favicon/apple-touch-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="../favicon/apple-touch-icon-60x60.png">
@@ -166,5 +165,6 @@
     Site not working properly? &#128534; <a class=normal_link href='mailto:thomas.rudge85@gmail.com?Subject=Something%20is%20wrong%20with%20your%20site!'>Please let me know.</a>
     </footer>
   </div>
+<script type="text/javascript" src="../javascript/mobile_navigation.js"></script>
 </body>
 </html>
