--- a/html/professional.html
+++ b/html/professional.html
@@ -38,7 +38,7 @@
   <meta property="og:description" content="The personal resume of Thomas Edward Rudge. A Business Analyst, Operations Expert, and Software Developer, with over 8 year's experience in Business and IT Change.">
   <!-- CSS & JS -->
   <link rel="stylesheet" href="../css/main.css">
-  <script type="text/javascript" src="../javascript/professional.js" async></script>
+  <script type="text/javascript" src="../javascript/professional.js"></script>
   <!-- Structured Data -->
   <script type="application/ld+json">
   {
