--- a/html/software.html
+++ b/html/software.html
@@ -38,7 +38,6 @@
   <meta property="og:description" content="Software projects by Thomas Edward Rudge.">
   <!-- CSS & JS -->
   <link rel="stylesheet" href="../css/main.css">
-  <script type="text/javascript" src="../javascript/mobile_navigation.js" async></script>
   <!-- Structured Data -->
   <script type="application/ld+json">
   {
@@ -223,5 +222,6 @@
     Site not working properly? &#128534; <a class=normal_link href="mailto:thomas.rudge85@gmail.com?Subject=Something%20is%20wrong%20with%20your%20site!">Please let me know.</a>
     </footer>
   </div>
+<script type="text/javascript" src="../javascript/mobile_navigation.js"></script>
 </body>
 </html>
