Imrpoved mobile navigation
Added a bar along the top of the page that scrolls to the top.

--- a/html/contact.html
+++ b/html/contact.html
@@ -65,6 +65,9 @@
 
 <body id=bcont style='height:100%;'>
   <div id=container style='height:100%;'>
+    <a id=topbar class='gen_text centred_txt' onclick='scrollToTop()'>
+    ^^^
+    </a>
     <header>
       <a href="../index.html">
         <img class=myphoto src="../images/logos/me.png" alt='My head photo'>
