--- a/html/design.html
+++ b/html/design.html
@@ -66,6 +66,9 @@
 
 <body id=bdesign>
   <div id=container>
+    <a id=topbar class='gen_text centred_txt' onclick='scrollToTop()'>
+    ^^^
+    </a>
     <header>
       <a href="../index.html">
         <img class=myphoto src="../images/logos/me.png" alt='My head photo'>
