--- a/html/photography.html
+++ b/html/photography.html
@@ -66,6 +66,9 @@
 
 <body id=bphoto>
   <div id=container class=black>
+    <a id=topbar class='gen_text centred_txt' onclick='scrollToTop()'>
+    ^^^
+    </a>
     <header class=black>
       <a href="../index.html">
         <img class=myphoto src="../images/logos/me.png" alt='My head photo'>
