--- a/html/professional.html
+++ b/html/professional.html
@@ -81,6 +81,9 @@
 
 <body id=bprof>
   <div id=container>
+    <a id=topbar class='gen_text centred_txt' onclick='scrollToTop()'>
+    ^^^
+    </a>
     <div id=noscript>
     Please enable javascript for full page functionality.
     </div>
