--- a/html/software.html
+++ b/html/software.html
@@ -86,6 +86,9 @@
 
 <body id=bsoft>
   <div id=container>
+    <a id=topbar class='gen_text centred_txt' onclick='scrollToTop()'>
+    ^^^
+    </a>
     <header>
       <a href="../index.html">
         <img class=myphoto src="../images/logos/me.png" alt='My head photo'>
