--- a/html/swift_page.html
+++ b/html/swift_page.html
@@ -79,6 +79,9 @@ MTMTMTMTMTMTMTMTMTMTMTMTMTMTMT
 
 <body id=bsoft>
   <div id=container>
+    <a id=topbar class='gen_text centred_txt' onclick='scrollToTop()'>
+    ^^^
+    </a>
     <div id=noscript>
     Woops! You have Javascript disabled. Unfortunately this page is as useful as a chocolate teapot without it (but not as tasty).
     </div>
