--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
 
 <body id=bhome>
   <div id=container>
+    <a id=topbar class='gen_text centred_txt' onclick='scrollToTop()'>
+    ^^^
+    </a>
     <header>
       <img class=myphoto src="images/logos/me.png" alt='My head photo'>
       <div id=headerdiv itemscope itemtype="http://schema.org/Person">
