Added Facebook Plugin

--- a/html/software.html
+++ b/html/software.html
@@ -185,6 +185,9 @@
     <div class='gen_div margin40 mobile_parent' id=nepos>
       <a href="http://neposservice.wix.com/nepos" title="Nepos Software" target="_blank" >
         <img class='genphoto mobile_child img150' src="../images/logos/nepos_logo.png" alt="NEPOS Logo">
+        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fnepos.software%2F&tabs=timeline&width=180&height=70&small_header=true&adapt_container_width=true&hide_cover=true&show_facepile=false&appId" 
+          width="180" height="70" style="border:none;overflow:hidden;margin-top: 8px;" scrolling="no" frameborder="0" allowTransparency="true">
+        </iframe>
       </a>
       <p class='gen_text justify med_text mobile_child'>
       After hearing my brother-in-law complain about the cost of his business's software, I decided to help him out and went about 
