Added PDF and DOCX versions of CV
Added PDF and DOCX copy of CV for download from site. Created download
links, including images, on the bottom of the professional page.

--- a/html/professional.html
+++ b/html/professional.html
@@ -849,10 +849,27 @@
     </div>
     <br>
     <br>
-    <div class=gen_div>
-      <p class='gen_text justify med_text margin70'>
+    <!-- Contact and Download Box -->
+    <div class='gen_div centred'>
+      <p class='gen_text centred med_text margin70'>
       <a class=normal_link href='contact.html'>Contact Me</a>
       </p>
+    </div>
+    <br>
+    <div style='margin-left: 10px;'>
+      <p class='gen_text small_text normal_link centred_txt' style='padding: 0; margin: 0;'>
+        Download
+      </p>
+      <div class='centred margin0'>
+        <a href='../other/Thomas E. Rudge - CV 2016.pdf' target='_blank'>
+          <img src='../images/logos/pdf.gif' style='padding-right: 10px;'>
+          </img>
+        </a>
+        <a href='../other/Thomas E. Rudge - CV 2016.docx' target='_blank'>
+          <img src='../images/logos/word.gif'>
+          </img>
+        </a>
+      </div>
     </div>
     <br>
     <br>
