--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           </a>
         </li>
         <li id=emailme>
-          <a href="mailto:thomas.rudge85@gmail.com" title="Get in touch">
+          <a href="mailto:hello@thomasrudge.co.uk" title="Get in touch">
           </a>
         </li>
       </ul>
@@ -201,7 +201,7 @@
     <br><br>
     <footer id=relative_footer>
     &#169; Copyright 2016 Thomas Edward Rudge. All rights reserved. All materials presented on this website are protected by copyright.<br>
-    Site not working properly? <span class=main_glyph>&#128534;</span> <a class=normal_link href="mailto:thomas.rudge85@gmail.com?Subject=Something%20is%20wrong%20with%20your%20site!">Please let me know.</a>
+    Site not working properly? <span class=main_glyph>&#128534;</span> <a class=normal_link href="mailto:hello@thomasrudge.co.uk?Subject=Something%20is%20wrong%20with%20your%20site!">Please let me know.</a>
     </footer>
   </div>
 </body>
