--- a/html/contact.html
+++ b/html/contact.html
@@ -148,7 +148,7 @@
           </a>
         </li>
         <li id=emailme>
-          <a href="mailto:thomas.rudge85@gmail.com" title="Get in touch">
+          <a href="mailto:hello@thomasrudge.co.uk" title="Get in touch">
           </a>
         </li>
       </ul>
@@ -165,7 +165,7 @@
     </div>
     <footer id=index_footer>
     &#169; Copyright 2016 Thomas Edward Rudge. All rights reserved. All materials presented on this website are protected by copyright.<br>
-    Site not working properly? &#128534; <a class=normal_link href='mailto:thomas.rudge85@gmail.com?Subject=Something%20is%20wrong%20with%20your%20site!'>Please let me know.</a>
+    Site not working properly? &#128534; <a class=normal_link href='mailto:hello@thomasrudge.co.uk?Subject=Something%20is%20wrong%20with%20your%20site!'>Please let me know.</a>
     </footer>
   </div>
 <script type="text/javascript" src="../javascript/mobile_navigation.js"></script>
