--- a/html/swift_page.html
+++ b/html/swift_page.html
@@ -163,7 +163,7 @@ MTMTMTMTMTMTMTMTMTMTMTMTMTMTMT
           </a>
         </li>
         <li id=emailme>
-          <a href="mailto:thomas.rudge85@gmail.com" title="Get in touch">
+          <a href="mailto:hello@thomasrudge.co.uk" title="Get in touch">
           </a>
         </li>
       </ul>
@@ -329,7 +329,7 @@ TEST12A,PIGGY123,ABC00070,1,2,D,M,2015-11-10,11824,2015-11-10,2015-11-10,C,33.33
     <hr>
     <footer class=relative_footer>
     &#169; Copyright 2016 Thomas Edward Rudge. All rights reserved. All materials presented on this website are protected by copyright.<br>
-    Site not working properly? &#128534; <a class=normal_link href="mailto:thomas.rudge85@gmail.com?Subject=Something%20is%20wrong%20with%20your%20site!">Please let me know.</a>
+    Site not working properly? &#128534; <a class=normal_link href="mailto:hello@thomasrudge.co.uk?Subject=Something%20is%20wrong%20with%20your%20site!">Please let me know.</a>
     </footer>
   </div>
 </body>
